// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Icons/HamburgerIcon should render a hamburger icon 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  width="30"
  height="30"
  viewBox="0 0 30 30"
>
  <path
    stroke="rgba(33, 37, 41, 0.75)"
    stroke-linecap="round"
    stroke-miterlimit="10"
    stroke-width="2"
    d="M4 7h22M4 15h22M4 23h22"
  ></path></svg
>;
"
`;

exports[`components/Icons/HamburgerIcon should render a hamburger icon with a stroke color 1`] = `
"

<svg
  xmlns="http://www.w3.org/2000/svg"
  width="30"
  height="30"
  viewBox="0 0 30 30"
>
  <path
    stroke="#fff"
    stroke-linecap="round"
    stroke-miterlimit="10"
    stroke-width="2"
    d="M4 7h22M4 15h22M4 23h22"
  ></path></svg
>;
"
`;
